--- a/athlete_plan.html
+++ b/athlete_plan.html
@@ -42,19 +42,11 @@
                 </button>
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-<<<<<<< HEAD
                     <li class="nav-item"><a href="athlete_info.html" class="nav-link">Info</a></li>
                     <li class="nav-item"><a href="athlete_progress.html" class="nav-link">Progress</a></li>
                     <li class="nav-item active"><a href="atlete_plan.html" class="nav-link">Workout Plan</a></li>
                     <li class="nav-item"><a href="athlete_chat.html" class="nav-link">Chat</a></li>
                     <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
-=======
-                        <li class="nav-item active"><a href="athlete_info.html" class="nav-link">Info</a></li>
-                        <li class="nav-item"><a href="athlete_progress.html" class="nav-link">Progress</a></li>
-                        <li class="nav-item"><a href="athlete_plan.html" class="nav-link">Workout Plan</a></li>
-                        <li class="nav-item"><a href="athlete_chat.html" class="nav-link">Chat</a></li>
-                        <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
->>>>>>> cf4c064fa8dbf2809c2389bee6905ff2e9e3558a
                 </ul>
             </div>
         </div>
@@ -103,17 +95,18 @@
     </section>
 
 
-    <div class="container-fluid">
-        <div class="row mb-2" style="display: flex;
+    <footer class="ftco-footer ftco-section img">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row mb-5" style="display: flex;
                     justify-content:center;">
-            <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
-                <div class="ftco-footer-widget mb-4">
-                    <p>Website desenvolvido no âmbito da cadeira Modelação e Análise de Sistemas. <br>Universidade de Aveiro</p>
+                <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
+                    <div class="ftco-footer-widget mb-4">
+                        <p>Website desenvolvido no âmbito da cadeira Modelação e Análise de Sistemas. <br>Universidade de Aveiro</p>
+                    </div>
                 </div>
-            </div>
-        </div>
-    </div>
 
+    </footer>
 
 
 
