--- a/athlete_progress.html
+++ b/athlete_progress.html
@@ -22,7 +22,6 @@
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/athlete_progress.js"></script>
-<<<<<<< HEAD
     <style>
         table {
             font-family: arial, sans-serif;
@@ -42,8 +41,6 @@
         }
     </style>
 
-=======
->>>>>>> cf4c064fa8dbf2809c2389bee6905ff2e9e3558a
 
 
 </head>
@@ -58,19 +55,11 @@
                 </button>
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-<<<<<<< HEAD
                     <li class="nav-item"><a href="athlete_info.html" class="nav-link">Info</a></li>
                     <li class="nav-item active"><a href="athlete_progress.html" class="nav-link">Progress</a></li>
                     <li class="nav-item"><a href="athlete_plan.html" class="nav-link">Workout Plan</a></li>
                     <li class="nav-item"><a href="athlete_chat.html" class="nav-link">Chat</a></li>
                     <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
-=======
-                        <li class="nav-item active"><a href="athlete_info.html" class="nav-link">Info</a></li>
-                        <li class="nav-item"><a href="athlete_progress.html" class="nav-link">Progress</a></li>
-                        <li class="nav-item"><a href="athlete_plan.html" class="nav-link">Workout Plan</a></li>
-                        <li class="nav-item"><a href="athlete_chat.html" class="nav-link">Chat</a></li>
-                        <li class="nav-item"><a href="index.html" class="nav-link">Logout</a></li>
->>>>>>> cf4c064fa8dbf2809c2389bee6905ff2e9e3558a
                 </ul>
             </div>
         </div>
@@ -90,23 +79,13 @@
     </section>
 
     <section>
-<<<<<<< HEAD
-        <div class="container">
+        <div class="col-md-8 offset-2">
             <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-            <div id="chart_div" class="colcol-md-7"></div>
-=======
-        <div>
-            <h1>Nao aparece o grafico, nao sei porque</h1>
-            <h4>(verificar codigo JS localizado no ficheiro a parte)</h4>
-            <h4>LINE CHART (weight loss,etc..):</h4>
-            <canvas id="lineChart" width="545" height="272" class="chartjs-render-monitor" style="display: block; width: 545px; height: 272px;"></canvas>
->>>>>>> cf4c064fa8dbf2809c2389bee6905ff2e9e3558a
+            <div id="chart_div"></div>
         </div>
     </section>
 
     <section>
-<<<<<<< HEAD
-        <br>
         <div class="container">
             <h3>Planos de Treino Antigos</h3>
             <div class="row">
@@ -186,27 +165,13 @@
                     </table>
                 </div>
             </div>
-=======
-        <div>
-            <h1>Nao aparece o grafico, nao sei porque</h1>
-            <h4>(verificar codigo JS localizado no ficheiro a parte)</h4>
-            <h4>Radar CHART (strength, stamina, etc...):</h4>
-            <canvas id="radarChart" width="545" height="272" class="chartjs-render-monitor" style="display: block; width: 545px; height: 272px;"></canvas>
->>>>>>> cf4c064fa8dbf2809c2389bee6905ff2e9e3558a
         </div>
+        <br>
     </section>
 
     <section>
-<<<<<<< HEAD
-    </section>
-    <br>
-=======
-        <div>
-            <h1>Mais charts: <a href="https://mdbootstrap.com/docs/jquery/javascript/charts/">https://mdbootstrap.com/docs/jquery/javascript/charts/</a></h1>
-        </div>
     </section>
 
->>>>>>> cf4c064fa8dbf2809c2389bee6905ff2e9e3558a
     <footer class="ftco-footer ftco-section img">
         <div class="overlay"></div>
         <div class="container">
@@ -249,7 +214,6 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
     <script src="js/google-map.js"></script>
     <script src="js/main.js"></script>
-<<<<<<< HEAD
     <script>
         $(document).ready(function() {
             var Data = JSON.parse(window.localStorage.getItem("Data"));
@@ -287,7 +251,7 @@
                 [11, 76],
                 [12, 75],
                 [13, 74],
-                [14, 70],
+                [14, 73],
                 [15, 73],
                 [16, 71],
                 [17, 70],
@@ -303,10 +267,10 @@
 
             var options = {
                 hAxis: {
-                    title: 'Time (weeks)'
+                    title: 'Time(In weeks)'
                 },
                 vAxis: {
-                    title: 'Weight'
+                    title: 'Weighth'
                 }
             };
 
@@ -315,8 +279,6 @@
             chart.draw(data, options);
         }
     </script>
-=======
->>>>>>> cf4c064fa8dbf2809c2389bee6905ff2e9e3558a
 
 </body>
 
