--- a/loginLucas.html
+++ b/loginLucas.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Muscle - Free Bootstrap 4 Template by Colorlib</title>
+    <title>CloudFit</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -89,15 +89,14 @@
 
         </section>
         <section>
-            <div class="jumbotron" style="background-color:rgba(0, 0, 0, 0);" >
-            </div>
+            <div class="jumbotron-fluid" style="background-color: rgba(0, 0, 0, 0); height:300px;"></div>
         </section>
-        <footer class="ftco-footer ftco-section img ">
-            <div class="overlay "></div>
-            <div class="container ">
-                <div class="row mb-5 " style="display: flex; justify-content:center; ">
-                    <div class="col-lg-3 col-md-6 mb-5 mb-md-5 ">
-                        <div class="ftco-footer-widget mb-4 ">
+        <footer class="ftco-footer ftco-section img">
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="row mb-5" style="display: flex; justify-content:center;">
+                    <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
+                        <div class="ftco-footer-widget mb-4">
                             <p>Website desenvolvido no âmbito da cadeira Modelação e Análise de Sistemas. <br>Universidade de Aveiro</p>
                         </div>
                     </div>
@@ -105,101 +104,81 @@
             </div>
         </footer>
         <!-- loader -->
-        <div id="ftco-loader " class="show fullscreen "><svg class="circular " width="48px " height="48px "><circle class="path-bg " cx="24 " cy="24 " r="22 " fill="none " stroke-width="4 " stroke="#eeeeee "/><circle class="path " cx="24 " cy="24
-                " r="22 " fill="none " stroke-width="4 " stroke-miterlimit="10 " stroke="#F96D00 "/></svg></div>
+        <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js "></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js "></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
         <script>
             $(document).ready(function() {
-                if (window.localStorage.getItem("Loaded ") == null) {
+                if (window.localStorage.getItem("Loaded") == null) {
                     user0 = {
-                        "Name ": "KnockOut ",
-                        "pwd ": "passteste1 ",
-                        "tipo ": "Gym ",
-                        "Pts ": ["user1 "]
+                        "Name": "KnockOut",
+                        "pwd": "passteste1",
+                        "tipo": "Gym",
+                        "Pts": ["user1"]
                     }
                     user1 = {
-                        "Name ": "Dinis ",
-                        "pwd ": "passteste2 ",
-                        "tipo ": "PersonalTrainer ",
-                        "Atletas ": ["user2 "],
-                        "Gym ": "KnockOut "
+                        "Name": "Dinis",
+                        "pwd": "passteste2",
+                        "tipo": "PersonalTrainer",
+                        "Atletas": ["user2"],
+                        "Gym": "KnockOut"
                     }
                     user2 = {
-                        "Name ": "Francisca ",
-                        "pwd ": "passteste3 ",
-                        "tipo ": "Atlete ",
-                        "PlanosAntigos ": [
-                            ["10min warm-up (rowing machine) ", "Barbell Bench Press (3x6-8) ", "Incline Dumbbell Press (3x8-10) ", "Tricep Dips + weight (3x8-10) ", "Pull Ups + weight (3x8-10) ", "Pendlay Rows (3x8-10) ", "PullDowns (3x8-10) "],
-                            ["10min warm-up (elliptical) ", "Front Squat (4x10) ", "Leg Press (4x10) ", "Stiff Deadlift (4x10) ", "Hamstring Curls (4x10) ", "Calf-Raise (4x10) ", "Leg Press (4x10) "],
-                            ["10min warm-up ", "Overhead Press (4x10) ", "Rack Pulls (4x10) ", "Arnold Press (4x10) ", "Lateral Raises (4x10) ", "Reverse Fly (4x10) ", "Sit-Ups (Tabata style, 5min) "]
+                        "Name": "Francisca",
+                        "pwd": "passteste3",
+                        "tipo": "Atlete",
+                        "PlanosAntigos": [
+                            ["10min warm-up (rowing machine) ", "Barbell Bench Press (3x6-8)", "Incline Dumbbell Press (3x8-10)", "Tricep Dips + weight (3x8-10)", "Pull Ups + weight (3x8-10)", "Pendlay Rows (3x8-10)", "PullDowns (3x8-10)"],
+                            ["10min warm-up (elliptical) ", "Front Squat (4x10)", "Leg Press (4x10)", "Stiff Deadlift (4x10)", "Hamstring Curls (4x10)", "Calf-Raise (4x10)", "Leg Press (4x10)"],
+                            ["10min warm-up", "Overhead Press (4x10)", "Rack Pulls (4x10)", "Arnold Press (4x10)", "Lateral Raises (4x10)", "Reverse Fly (4x10)", "Sit-Ups (Tabata style, 5min)"]
                         ],
-                        "PlanoTreinoAtual ": ['Lat pulldown (4X12)', 'Bentover row (4X12)', 'Pull-Ups (4XMAX)', 'Push-Ups (4XMAX)', 'Bicep curl (4X12) ', 'Tricep dip (4X12)', 'Shoulder press (4X12)'],
-                        "mensagens ": [],
-                        "Pt ": "user0 "
+                        "PlanoTreinoAtual": ['Lat pulldown (4X12)', 'Bentover row (4X12)', 'Pull-Ups (4XMAX)', 'Push-Ups (4XMAX)', 'Bicep curl (4X12) ', 'Tricep dip (4X12)', 'Shoulder press (4X12)'],
+                        "mensagens": [],
+                        "Pt": "user0"
                     }
-                    window.localStorage.setItem("user0 ", JSON.stringify(user0))
-                    window.localStorage.setItem("user1 ", JSON.stringify(user1))
-                    window.localStorage.setItem("user2 ", JSON.stringify(user2))
-                    window.localStorage.setItem("NumUsers ", "3 ")
-                    window.localStorage.setItem("numAtribuicao ", "1 ")
-                    window.localStorage.setItem("numPersonalT ", "1 ")
-                    window.localStorage.setItem("menor ", "1 ")
-                    window.localStorage.setItem("Loaded ", "true ");
+                    window.localStorage.setItem("user0", JSON.stringify(user0))
+                    window.localStorage.setItem("user1", JSON.stringify(user1))
+                    window.localStorage.setItem("user2", JSON.stringify(user2))
+                    window.localStorage.setItem("NumUsers", "3")
+                    window.localStorage.setItem("numAtribuicao", "1")
+                    window.localStorage.setItem("numPersonalT", "1")
+                    window.localStorage.setItem("menor", "1")
+                    window.localStorage.setItem("Loaded", "true");
                 }
-                $(".done ").click(function() {
-                    var nomeuser = $(".uname ").val();
-                    var pwduser = $(".upwd ").val();
+                $(".done").click(function() {
+                    var nomeuser = $(".uname").val();
+                    var pwduser = $(".upwd").val();
                     var UserExists = false;
-                    for (var c = 0; c < parseInt(window.localStorage.getItem("NumUsers ")); c++) {
-                        var Utilizador = JSON.parse(window.localStorage.getItem("user " + c));
+                    for (var c = 0; c < parseInt(window.localStorage.getItem("NumUsers")); c++) {
+                        var Utilizador = JSON.parse(window.localStorage.getItem("user" + c));
                         if (Utilizador.Name == nomeuser && pwduser == Utilizador.pwd) {
                             UserExists = true;
                             var tipo = Utilizador.tipo;
-                            window.localStorage.setItem("Data ", window.localStorage.getItem("user " + c))
+                            window.localStorage.setItem("Data", window.localStorage.getItem("user" + c))
                         }
                     }
                     if (UserExists) {
-                        console.log("SUCESS ")
-                        if (tipo == "Gym ") {
-                            console.log("Easy ")
-                            window.location.href = "Ginasio.html "
-                        } else if (tipo == "Atlete ") {
-                            console.log("Easy ")
-                            window.location.href = "athlete_info.html "
+                        console.log("SUCESS")
+                        if (tipo == "Gym") {
+                            console.log("Easy")
+                            window.location.href = "Ginasio.html"
+                        } else if (tipo == "Atlete") {
+                            console.log("Easy")
+                            window.location.href = "athlete_info.html"
                         } else {
-                            console.log("Easy ")
-                            window.location.href = "PT.html "
+                            console.log("Easy")
+                            window.location.href = "PT.html"
                         }
-                        $(".erro ").hide();
+                        $(".erro").hide();
                     } else {
-                        $(".msg ").text("Conta inexistente ")
-                        $(".erro ").show();
+                        $(".msg").text("Conta inexistente")
+                        $(".erro").show();
                     }
                 });
             });
         </script>
-<<<<<<< HEAD
-        <script src="js/jquery.min.js "></script>
-        <script src="js/jquery-migrate-3.0.1.min.js "></script>
-        <script src="js/popper.min.js "></script>
-        <script src="js/bootstrap.min.js "></script>
-        <script src="js/jquery.easing.1.3.js "></script>
-        <script src="js/jquery.waypoints.min.js "></script>
-        <script src="js/jquery.stellar.min.js "></script>
-        <script src="js/owl.carousel.min.js "></script>
-        <script src="js/jquery.magnific-popup.min.js "></script>
-        <script src="js/aos.js "></script>
-        <script src="js/jquery.animateNumber.min.js "></script>
-        <script src="js/bootstrap-datepicker.js "></script>
-        <script src="js/jquery.timepicker.min.js "></script>
-        <script src="js/scrollax.min.js "></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false "></script>
-        <script src="js/google-map.js "></script>
-        <script src="js/main.js "></script>
-=======
         <script src="js/jquery.min.js"></script>
         <script src="js/jquery-migrate-3.0.1.min.js"></script>
         <script src="js/popper.min.js"></script>
@@ -217,7 +196,6 @@
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
         <script src="js/google-map.js"></script>
         <script src="js/main.js"></script>
->>>>>>> cf4c064fa8dbf2809c2389bee6905ff2e9e3558a
 
 </body>
 
